--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+<head>
+<meta http-equiv="refresh" content="0; url='https://drive.google.com/drive/u/0/folders/1Nf9BQtLgi2lEkPKrh9f8uuCCLNeleq81'" />
+</head>
 <body>
-<p>still processing...</p>
+<p>hi</p>
 </body>
 </html>
